--- a/bungeecord/src/main/resources/bungee.yml
+++ b/bungeecord/src/main/resources/bungee.yml
@@ -3,3 +3,5 @@ version: '${version}'
 author: gerolndnr
 website: https://github.com/gerolndnr
 main: com.github.gerolndnr.connectionguard.bungee.ConnectionGuardBungeePlugin
+softdepends:
+  - LuckPerms
