--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -4,6 +4,8 @@ author: gerolndnr
 website: https://github.com/gerolndnr
 main: com.github.gerolndnr.connectionguard.spigot.ConnectionGuardSpigotPlugin
 api-version: 1.13
+softdepend:
+  - LuckPerms
 commands:
   connectionguard:
     name: connectionguard
